--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,24 +6,32 @@
     <title>Inicio</title>
     {% load static %}  <!-- Cargamos las etiquetas estáticas -->
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <style>
+        #seccion-principal {
+            position: relative;
+            background: url("{% static 'images/background.svg' %}") no-repeat center center;
+            background-color: #11101c;
+            background-size: cover, contain;
+        }
+    </style>
 </head>
 <body>
     {% include 'header.html' %}
 
 
     <!-- Sección Principal -->
-    <section class="container-info color-doble d-flex ">
+    <section id="seccion-principal" class="container-info color-doble d-flex ">
         <!-- Contenido Izquierdo -->
         <div class="info-texto pl-5">
             <div class="logo-completo pb-1"></div>
-            <h2 class="color-terciario-fuente">¡Invierte al instante, donde quieras y cuando quieras!</h2>
+            <h2 id="titulo-portada" class="color-terciario-fuente">¡Invierte al instante, donde quieras y cuando quieras!</h2>
             <p id="mi-parrafo-especifico" class="color-terciario-fuente pt-1 pb-3">
                 Invertir nunca fue tan sencillo: todo lo que necesitas en la plataforma de inversión definitiva, accesible desde cualquier dispositivo.
             </p>
             {% if not user.is_authenticated %}
             <!-- Botones visibles solo si el usuario NO está autenticado -->
             <div class="d-flex gap-1 pt-1">
-                <div class="boton color-primario color-basico-fw pa-1">
+                <div id="boton-login1" class="boton color-primario color-basico-fw pa-1">
                     <a class="color-basico-fb f-b" href="{% url 'usuarios:login' %}">Inicia Sesión</a>
                 </div>
                 <div id="boton-registro" class="boton borde-1 color-basico-fw pa-1">
