--- a/src/templates/comprar.html
+++ b/src/templates/comprar.html
@@ -1,53 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comprar Acciones</title>
+    <title>Registrar Acciones</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 </head>
+
 <body id="body-comprar">
 
     {% include 'header.html' %}
 
     <div class="color-cuatro pt-3">
-        <h3 class="pb-1 f-xb color-basico-fw" style="border-bottom: 2px solid #ccc; margin-left: 50px; margin-right: 50px; display: flex; justify-content: space-between;">
-            <span>Comprar Acciones</span>
+        <h3 class="pb-1 f-xb color-basico-fw"
+            style="border-bottom: 2px solid #ccc; margin-left: 50px; margin-right: 50px; display: flex; justify-content: space-between;">
+            <span>Registrar Acciones</span>
             <span>{{ user.nombres }}</span>
         </h3>
     </div>
-    
+
     <section class="container-compra d-flex color-cuatro pt-5">
         <!-- Columna Izquierda: Formulario de Compra -->
-        <form class="info-login flex-column pl-5" method="POST" action="{% url 'compras:comprar_accion' %}">
+        <form class="info-login flex-column pl-5" method="POST" action="{% url 'compras:comprar_accion' %}"
+            onsubmit="return confirmarCompra()">
             {% csrf_token %}
             <div class="campo">
                 <label class="etiqueta" for="nombre" style="color: white;">Nombre de la Acción</label>
-                <input type="text" name="nombre" id="nombre" class="input-compra" placeholder="Nombre de la acción" required>
+                <input type="text" name="nombre" id="nombre" class="input-compra" placeholder="Nombre de la acción"
+                    required>
             </div>
             <div class="campo">
                 <label class="etiqueta" for="cantidad" style="color: white;">Cantidad de acciones</label>
-                <input type="number" name="cantidad" id="cantidad" class="input-compra" placeholder="Cantidad de acciones" min="1" required>
+                <input type="number" name="cantidad" id="cantidad" class="input-compra"
+                    placeholder="Cantidad de acciones" min="1" step="1" max="100000" required>
             </div>
             <div class="campo">
                 <label class="etiqueta" for="fecha_compra" style="color: white;">Fecha de compra</label>
-                <input type="date" name="fecha_compra" id="fecha_compra" class="input-compra" placeholder="Fecha de compra" required>
+                <input type="date" name="fecha_compra" id="fecha_compra" class="input-compra"
+                    placeholder="Fecha de compra" max="" min="1900-01-01" required>
             </div>
 
             <!-- Nuevos campos no editables -->
             <div class="campo">
-                <input type="text" id="precio_accion" class="input-compra" placeholder="Precio de Acción en la fecha elegida" readonly>
+                <label class="etiqueta" for="precio_accion" style="color: white;">Precio de Acción</label>
+                <input type="number" name="precio_accion" id="precio_accion" class="input-compra"
+                    placeholder="Precio de Acción en la fecha elegida" min="0.001" step="0.001" max="100000" required>
             </div>
             <div class="campo">
-                <input type="text" id="total_compra" class="input-compra" placeholder="Total de Compra" readonly>
+                <label class="etiqueta" for="total_compra" style="color: white;">Total</label>
+                <input type="number" id="total_compra" class="input-compra" placeholder="Total" readonly>
             </div>
 
-            <div >
-                <button type="submit" id="btn-comprar" class="boton color-primario color-basico-fw pa-1" onclick="return confirmarCompra()">Comprar</button>
+            <div>
+                <button type="submit" id="btn-comprar"
+                    class="boton color-primario color-basico-fw pa-1">Registrar</button>
             </div>
         </form>
-    
+
         <!-- Columna Derecha: Tabla con empresas y acciones -->
 
         <div class="acciones-disponibles">
@@ -104,16 +115,17 @@
             </table>
         </div>
 
-    
-    {% include 'mensajes.html' %}
-    <script src="{% static 'js/compras.js' %}"></script>
-    <script src="{% static 'js/mensajes.js' %}"></script>
 
-    <script>
-        // Función para seleccionar una acción de la tabla
-        function agregarNombreAccion(ticker) {
-            document.getElementById('nombre').value = ticker; // Coloca el ticker en el campo "nombre"
-        }
-    </script>
+        {% include 'mensajes.html' %}
+        <script src="{% static 'js/compras.js' %}"></script>
+        <script src="{% static 'js/mensajes.js' %}"></script>
+
+        <script>
+            // Función para seleccionar una acción de la tabla
+            function agregarNombreAccion(ticker) {
+                document.getElementById('nombre').value = ticker; // Coloca el ticker en el campo "nombre"
+            }
+        </script>
 </body>
+
 </html>
