[Style]: Registro-Login
Añadidos labels y mejoras en el diseño de los formularios de registro e inicio de sesión.
- Incorporados labels descriptivos para campos del formulario, mejorando la accesibilidad.
- Actualizados los botones para una mejor experiencia de usuario, incluyendo estilos mejorados y ajustes de tamaño.

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -8,32 +8,33 @@
             <li class="pa-1"><a class="color-basico-fb" href="{% url 'nosotros:nosotros' %}">Nosotros</a></li>
 
             {% if user.is_authenticated %}
-                <!-- Si el usuario está autenticado, mostramos las siguientes opciones -->
-                <li class="pa-1"><a class="color-basico-fb" href="{% url 'usuarios:perfil' %}">Perfil</a></li>
-                <li class="pa-1"><a class="color-basico-fb" href="{% url 'compras:compras' %}">Registrar</a></li>
-                <li class="pa-1"><a class="color-basico-fb" href="{% url 'portafolio:portafolio' %}">Portafolio</a></li>
+            <!-- Si el usuario está autenticado, mostramos las siguientes opciones -->
+            <li class="pa-1"><a class="color-basico-fb" href="{% url 'usuarios:perfil' %}">Perfil</a></li>
+            <li class="pa-1"><a class="color-basico-fb" href="{% url 'compras:compras' %}">Registrar</a></li>
+            <li class="pa-1"><a class="color-basico-fb" href="{% url 'portafolio:portafolio' %}">Portafolio</a></li>
             {% endif %}
         </ul>
     </div>
     <div class="barra f-right d-flex pr-1 gap-1">
         {% if user.is_authenticated %}
-            <!-- Si el usuario está autenticado -->
-            <div class="boton pa-1" style="width: 40px; align-items: center;">
-                <img src="{% static 'img/usuario.png' %}" alt="Foto de perfil predeterminada" class="perfil-img" style="width: 40px; height: 40px; border-radius: 50%;">
-            </div>
-            <form action="{% url 'usuarios:logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit" class="boton color-primario pa-1 color-basico-fw">Cerrar Sesión</button>
-            </form>
-            
+        <!-- Si el usuario está autenticado -->
+        <div class="boton pa-1" style="width: 40px; align-items: center;">
+            <img src="{% static 'img/usuario.png' %}" alt="Foto de perfil predeterminada" class="perfil-img"
+                style="width: 40px; height: 40px; border-radius: 50%;">
+        </div>
+        <form action="{% url 'usuarios:logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="boton color-primario pa-1 color-basico-fw">Cerrar Sesión</button>
+        </form>
+
         {% else %}
-            <!-- Si el usuario no está autenticado -->
-            <div class="boton color-primario pa-1">
-                <a class="color-basico-fw" href="{% url 'usuarios:login' %}">Iniciar Sesión</a>
-            </div>
-            <div id="boton-crear-cuenta" class="boton pa-1 borde-1">
-                <a class="color-basico-fw" href="{% url 'usuarios:signup' %}">Crear Cuenta</a>
-            </div>
+        <!-- Si el usuario no está autenticado -->
+        <div class="boton color-primario pa-1">
+            <a class="color-basico-fw" href="{% url 'usuarios:login' %}">Iniciar Sesión</a>
+        </div>
+        <div id="boton-crear-cuenta" class="boton pa-1 borde-1">
+            <a class="color-basico-fw" href="{% url 'usuarios:signup' %}">Crear Cuenta</a>
+        </div>
         {% endif %}
     </div>
 </header>
