--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -9,7 +9,7 @@
     src: url('../fonts/sf-ui-display-light.otf') format('opentype');
 }
 
-#body-comprar{
+#body-comprar {
     overflow: hidden;
 }
 
@@ -31,8 +31,10 @@
 }
 
 #titulo-portada {
-    font-size: 2em; /* Tamaño de fuente inicial */
-    text-align: left; /* Centrar el texto */
+    font-size: 2em;
+    /* Tamaño de fuente inicial */
+    text-align: left;
+    /* Centrar el texto */
 }
 
 #mi-parrafo-especifico {
@@ -46,11 +48,13 @@
 /* Media queries para pantallas más pequeñas */
 @media (max-width: 1366px) {
     #titulo-portada {
-        font-size: 1.8em; /* Reducir el tamaño de la fuente */
+        font-size: 1.8em;
+        /* Reducir el tamaño de la fuente */
     }
 
     #mi-parrafo-especifico {
-        font-size: 1.2em; /* Reducir el tamaño de la fuente */
+        font-size: 1.2em;
+        /* Reducir el tamaño de la fuente */
     }
 }
 
@@ -58,122 +62,273 @@
 /* Media queries para pantallas más grandes */
 @media (min-width: 1370px) {
     #titulo-portada {
-        font-size: 3em; /* Aumentar el tamaño de la fuente */
+        font-size: 3em;
+        /* Aumentar el tamaño de la fuente */
     }
 
     #mi-parrafo-especifico {
-        font-size: 1.8em; /* Aumentar el tamaño de la fuente */
+        font-size: 1.8em;
+        /* Aumentar el tamaño de la fuente */
     }
 }
 
 
 /* Estilos base para los botones */
 #boton-registro {
-    border: 2px solid white;  
-    padding: 10px;             
-    text-align: center; 
-    transition: background-color 0.5s;       
+    border: 2px solid white;
+    padding: 10px;
+    text-align: center;
+    transition: background-color 0.5s;
 }
 
 /* Media queries para pantallas más grandes */
 @media (min-width: 1370px) {
-    #boton-login1, #boton-registro {
-        padding: 12px 50px; /* Aumentar el tamaño del padding */
-        margin-right: 25px; /* Aumentar el margen izquierdo */
-        font-size: 1.2em; /* Aumentar el tamaño de la fuente */
-    }
-    #boton-login1 a, #boton-registro a {
 
-/* Aumentar el tamaño de la fuente */
+    #boton-login1,
+    #boton-registro {
+        padding: 12px 50px;
+        /* Aumentar el tamaño del padding */
+        margin-right: 25px;
+        /* Aumentar el margen izquierdo */
+        font-size: 1.2em;
+        /* Aumentar el tamaño de la fuente */
+    }
+
+    #boton-login1 a,
+    #boton-registro a {
+
+        /* Aumentar el tamaño de la fuente */
     }
 }
 
 
 /* Preset */
-body { margin: 0; padding: 0; }
-* { margin: 0}
+body {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    margin: 0
+}
 
 /* Fuentes */
 h2 {
     font-family: 'MontserratBold';
     font-size: 40px;
 }
+
 h3 {
     font-family: 'MontserratBold';
     font-size: 19px;
 }
+
 .letra-mediana {
     font-family: 'MontserratBold';
     font-size: 19px;
 }
+
 .letra-normal {
     font-family: 'MontserratBold';
     font-size: 14px;
 }
+
 p {
     font-family: 'SFUIDisplayLight';
     font-size: 16px;
 }
+
 a {
     font-family: 'MontserratBold';
     font-size: 14px;
     text-decoration: none;
 }
+
 .mayusculas {
     text-transform: uppercase;
 }
 
 /* Colores */
-.color-primario { background-color: #3193e2; }
-.color-secundario { background-color: #d8d8d8; }
-.color-terciario{background-color: #110f1c;}
-.color-cuatro{background-color: #2d2d2f;}
+.color-primario {
+    background-color: #3193e2;
+}
+
+.color-secundario {
+    background-color: #d8d8d8;
+}
+
+.color-terciario {
+    background-color: #110f1c;
+}
+
+.color-cuatro {
+    background-color: #2d2d2f;
+}
+
 .color-doble {
-    background: linear-gradient(160deg, #110f1c, #3b4561); /* Gradiente */
+    background: linear-gradient(160deg, #110f1c, #3b4561);
+    /* Gradiente */
 }
+
+.label_formulario{
+    color: #707070;
+    font-size: 18px;
+    font-family: 'Nunito Sans', sans-serif;
+    transition: opacity 1.8s ease;
+    width: 150px;
+    text-align: left;
+}
+
+.label_formulario.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.form-group {
+    display: flex; 
+    align-items:center;
+    margin-bottom: 15px;
+    width: 600px;
+    transition: transform 0.3s ease;
+   
+}
+
+.form-group.shifted {
+    transform: translateX(-42px); /* Desplaza el contenedor a la derecha */
+}
+
+.form-group label {
+    width: 100px; /* Ajusta el ancho de la etiqueta según sea necesario */
+    margin-right: 10px;
+
+}
+
+.form-group input {
+    flex: 1;
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
 /*fuentes*/
-.color-primario-fuente { color: #176FA6; }
-.color-secundario-fuente { color: #707070; }
-.color-terciario-fuente {
-     color: #d8d8d8;
-     font-size: 35px; 
-     text-align: left;
-     padding-right: 0px;
-     padding-left: 40px;
+.color-primario-fuente {
+    color: #176FA6;
 }
 
-.color-basico-fb { color: black; }
-.color-basico-fw { color: rgb(255, 255, 255); }
-/*tamaño fuentes*/
-.f-b{font-size: 16px;;}
-.f-xb{font-size: 22px;}
-/* Espaciados */
-.pt-1 { padding-top: 10px; }
-.ptb-1 { padding: 10px 0; }
-.pb-1 { padding-bottom: 10px; }
-.pl-1 { padding-left: 10px; }
-.pr-1 { padding-right: 10px; }
-.pa-1 { padding: 10px 10px; }
-.gap-1 { gap: 10px; }
+.color-secundario-fuente {
+    color: #707070;
+}
 
-.pt-3{ padding-top: 30px; }
-.pb-3{padding-bottom: 30px;}
-.pt-3{padding-top: 30px;}
-.pl-5{padding-left: 50px;}
-.pa-5{padding: 50px;}
-.pt-5{padding-top: 50px;}
+.color-terciario-fuente {
+    color: #d8d8d8;
+    font-size: 35px;
+    text-align: left;
+    padding-right: 0px;
+    padding-left: 40px;
+}
+
+.color-basico-fb {
+    color: black;
+}
+
+.color-basico-fw {
+    color: rgb(255, 255, 255);
+}
+
+/*tamaño fuentes*/
+.f-b {
+    font-size: 16px;
+    ;
+}
+
+.f-xb {
+    font-size: 22px;
+}
+
+/* Espaciados */
+.pt-1 {
+    padding-top: 10px;
+}
+
+.ptb-1 {
+    padding: 10px 0;
+}
+
+.pb-1 {
+    padding-bottom: 10px;
+}
+
+.pl-1 {
+    padding-left: 10px;
+}
+
+.pr-1 {
+    padding-right: 10px;
+}
+
+.pa-1 {
+    padding: 10px 10px;
+}
+
+.gap-1 {
+    gap: 10px;
+}
+
+.pt-3 {
+    padding-top: 30px;
+}
+
+.pb-3 {
+    padding-bottom: 30px;
+}
+
+.pt-3 {
+    padding-top: 30px;
+}
+
+.pl-5 {
+    padding-left: 50px;
+}
+
+.pa-5 {
+    padding: 50px;
+}
+
+.pt-5 {
+    padding-top: 50px;
+}
+
 /* Disposiciones */
-.t-centrado { text-align: center; }
-.t-derecha { text-align: right; }
+.t-centrado {
+    text-align: center;
+}
+
+.t-derecha {
+    text-align: right;
+}
 
 /* Display */
-.d-flex { display: flex; }
-.d-ib { display: inline-block; }
-.justify-sb { justify-content: space-between; }
+.d-flex {
+    display: flex;
+}
+
+.d-ib {
+    display: inline-block;
+}
+
+.justify-sb {
+    justify-content: space-between;
+}
 
 /* Float */
-.f-left { float: left; }
-.f-right { float: right; }
+.f-left {
+    float: left;
+}
+
+.f-right {
+    float: right;
+}
 
 /* Bordes */
 .borde-1 {
@@ -184,10 +339,12 @@ a {
 header {
     height: 50px;
 }
+
 .barra {
     align-items: center;
     height: 100%;
 }
+
 .barra ul {
     list-style-type: none;
 }
@@ -203,7 +360,8 @@ header {
     background-size: 100% auto;
     margin: 0 auto;
 }
-.logo-completo{
+
+.logo-completo {
     height: 250px;
     width: 300px;
     background-image: url(../img/finac-blanco.png);
@@ -212,7 +370,8 @@ header {
     background-size: 100% auto;
     margin: 0 auto;
 }
-.logo-completo-black{
+
+.logo-completo-black {
     height: 300px;
     width: 300px;
     background-image: url(../img/finac-negro.png);
@@ -234,52 +393,83 @@ header {
 
 
 #boton-registro:hover {
-    background-color: white;  
+    background-color: white;
 }
 
 #boton-registro a {
-    color: white;  /* Color del texto en blanco */
+    color: white;
+    /* Color del texto en blanco */
     font-weight: bold;
     text-decoration: none;
-    transition: color 0.5s;  /* Suaviza el cambio de color del texto */
+    transition: color 0.5s;
+    /* Suaviza el cambio de color del texto */
 }
 
 #boton-registro:hover a {
-    color: black;  
+    color: black;
 }
 
 #boton-crear-cuenta {
-    border: 2px solid rgb(0, 0, 0);  
-    padding: 10px;             
-    text-align: center; 
-    transition: background-color 0.5s;  
+    border: 2px solid rgb(0, 0, 0);
+    padding: 10px;
+    text-align: center;
+    transition: background-color 0.5s;
 }
 
 #boton-crear-cuenta:hover {
-    background-color: rgba(0, 0, 0, 0.836);  
+    background-color: rgba(0, 0, 0, 0.836);
 }
 
 #boton-crear-cuenta a {
-    color: rgb(0, 0, 0);  /* Color del texto en blanco */
+    color: rgb(0, 0, 0);
+    /* Color del texto en blanco */
     font-weight: bold;
     text-decoration: none;
-    transition: color 0.5s;  /* Suaviza el cambio de color del texto */
+    transition: color 0.5s;
+    /* Suaviza el cambio de color del texto */
 }
 
 #boton-crear-cuenta:hover a {
-    color: rgb(255, 255, 255);  
+    color: rgb(255, 255, 255);
 }
 
 #boton-registrar {
+    margin-top: 30px;
     border: none;
-    color: white; 
-    padding: 10px;             
-    text-align: center; 
-    transition: background-color 0.5s;       
+    width: 150px;
+    font-size: 18px;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: bold;
+    transition: background-color 0.5s;
+}
+
+#boton-registrar:hover {
+    background-color: transparent;
+    border: 2px solid #176FA6;
 }
 
 #boton-iniciar-sesion {
+    margin-top: 30px;
     border: none;
+    width: 150px;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    text-align: center;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: bold;
+    transition: background-color 0.5s;
+}
+
+#boton-iniciar-sesion span {
+    font-size: 18px;
+}
+
+#boton-iniciar-sesion:hover {
+    background-color: transparent;
+    border: 2px solid #176FA6;
 }
 
 .card {
@@ -287,12 +477,13 @@ header {
     border: 1px solid #707070;
     border-radius: 0px 0px 15px 15px;
 }
+
 .circulo {
     border-radius: 50%;
     background-image: url(../img/usuario.png);
     background-position: 50%;
     background-size: 100% auto;
-    margin:0px auto;
+    margin: 0px auto;
     border-radius: 50%;
 }
 
@@ -305,18 +496,25 @@ header {
     align-items: center;
     text-align: center;
 }
+
 .info-imagen {
     display: flex;
-    justify-content: center; /* Centra la imagen dentro del contenedor */
-    align-items: center; /* Centra la imagen verticalmente */
+    justify-content: center;
+    /* Centra la imagen dentro del contenedor */
+    align-items: center;
+    /* Centra la imagen verticalmente */
     animation: mover-der-izq 1s ease-in-out;
 }
+
 @keyframes mover-der-izq {
     from {
-        transform: translateX(100%); /* Inicia fuera de la pantalla hacia arriba */
+        transform: translateX(100%);
+        /* Inicia fuera de la pantalla hacia arriba */
     }
+
     to {
-        transform: translateY(0); /* Termina en su posición original */
+        transform: translateY(0);
+        /* Termina en su posición original */
     }
 }
 
@@ -326,15 +524,19 @@ header {
     align-items: center;
     text-align: center;
 }
-.info-compra{
+
+.info-compra {
     width: 50%;
     width: auto;
 }
+
 #imagen-login1 {
     width: 100%;
     display: flex;
-    justify-content: center; /* Centra horizontalmente la imagen */
-    align-items: center; /* Centra la imagen verticalmente */
+    justify-content: center;
+    /* Centra horizontalmente la imagen */
+    align-items: center;
+    /* Centra la imagen verticalmente */
     animation: moveIn 1s ease-in-out;
 }
 
@@ -347,17 +549,23 @@ header {
 #imagen-registrar {
     width: 50%;
     display: flex;
-    justify-content: center; /* Centra horizontalmente la imagen */
-    align-items: center; /* Centra la imagen verticalmente */
+    justify-content: center;
+    /* Centra horizontalmente la imagen */
+    align-items: center;
+    /* Centra la imagen verticalmente */
     animation: mover-der-izq 1s ease-in-out;
+    z-index: 10;
 }
 
 @keyframes moveIn {
     from {
-        transform: translateX(-100%); /* Inicia fuera de la pantalla hacia arriba */
+        transform: translateX(-100%);
+        /* Inicia fuera de la pantalla hacia arriba */
     }
+
     to {
-        transform: translateY(0); /* Termina en su posición original */
+        transform: translateY(0);
+        /* Termina en su posición original */
     }
 }
 
@@ -367,66 +575,59 @@ header {
 /* Contenedor Principal */
 .container-info {
     width: 100%;
-    height: 100vh; /* Ocupa toda la altura de la pantalla */
+    height: 100vh;
+    /* Ocupa toda la altura de la pantalla */
 }
 
-.container-compra{
+.container-compra {
     width: 100%;
     height: 100vh;
-     /* Ocupa toda la altura de la pantalla */
+    /* Ocupa toda la altura de la pantalla */
 }
-/* Columna Izquierda: Login */
-.input-login {
-    width: 100%; /* Ocupa todo el ancho del formulario */
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
+
+
 .campo {
     display: flex;
-    align-items:center;
-    justify-content:end;
+    align-items: center;
+    justify-content: end;
 }
 
 .input-compra {
- 
+
 
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 425px; 
-    margin-right: 50px;  /* Cambia este valor a la posición deseada en X */
-    
-    display: block; /* Asegura que cada input esté en una nueva línea */
+    width: 425px;
+    margin-right: 50px;
+    /* Cambia este valor a la posición deseada en X */
+
+    display: block;
+    /* Asegura que cada input esté en una nueva línea */
 }
 
 .etiqueta {
     font-size: 14px;
 
     padding: 10px;
-    width: 125px; 
+    width: 125px;
     display: inline-block;
     font-family: Arial, sans-serif;
-    
+
 }
 
 
-.input-registro {
-    width: 70%; /* Ocupa todo el ancho del formulario */
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
 
 
 /* Columna Derecha: Imagen */
 .imagen-pantalla {
-    width: 100%; /* La imagen ocupa el 80% del contenedor */
-    height: 100%; /* Mantiene proporciones */
+    width: 100%;
+    /* La imagen ocupa el 80% del contenedor */
+    height: 100%;
+    /* Mantiene proporciones */
 }
+
 /* Animaciones */
 
 .mensaje {
@@ -443,39 +644,48 @@ header {
 
 /* Estilo para el mensaje de éxito */
 .mensaje.success {
-    background-color: #4CAF50; /* Verde */
+    background-color: #4CAF50;
+    /* Verde */
     color: white;
 }
 
 /* Estilo para el mensaje de error */
 .mensaje.error {
-    background-color: #f44336; /* Rojo */
+    background-color: #f44336;
+    /* Rojo */
     color: white;
 }
 
 /* Contenedor de la tabla a la derecha */
 .acciones-disponibles {
-    margin-left: auto; /* Empuja la tabla hacia la derecha */
-    margin-right: 50px; /* Espacio adicional a la derecha si es necesario */
+    margin-left: auto;
+    /* Empuja la tabla hacia la derecha */
+    margin-right: 50px;
+    /* Espacio adicional a la derecha si es necesario */
     color: white;
-    width: 35%; /* Ajuste para que ocupe solo una parte del espacio */
+    width: 35%;
+    /* Ajuste para que ocupe solo una parte del espacio */
 }
 
 /* Tabla */
 .tabla-acciones {
     width: 100%;
     border-collapse: collapse;
-    background-color: #2d2d2f; /* Fondo oscuro para la tabla */
-    border-radius: 8px; /* Bordes redondeados */
+    background-color: #2d2d2f;
+    /* Fondo oscuro para la tabla */
+    border-radius: 8px;
+    /* Bordes redondeados */
     color: white;
-    font-family: 'MontserratBold', sans-serif; /* Usar la misma fuente que el resto de la página */
+    font-family: 'MontserratBold', sans-serif;
+    /* Usar la misma fuente que el resto de la página */
 }
 
 /* Cabeceras de la tabla */
 .tabla-acciones th {
     padding: 12px;
     text-align: left;
-    background-color: #3193e2; /* Color primario de la página */
+    background-color: #3193e2;
+    /* Color primario de la página */
     color: white;
     font-size: 16px;
     font-weight: bold;
@@ -485,12 +695,14 @@ header {
 .tabla-acciones td {
     padding: 12px;
     text-align: left;
-    border-bottom: 1px solid #707070; /* Línea divisoria sutil */
+    border-bottom: 1px solid #707070;
+    /* Línea divisoria sutil */
     font-size: 14px;
 }
 
 /* Efecto hover */
 .tabla-acciones tr:hover {
-    background-color: #3b4561; /* Color más claro al pasar el ratón */
+    background-color: #3b4561;
+    /* Color más claro al pasar el ratón */
     cursor: pointer;
 }
