[Style]: Mejoras en el diseño de Portafolio y Cabecera

--- a/src/templates/comprar.html
+++ b/src/templates/comprar.html
@@ -7,6 +7,8 @@
     <title>Registrar Acciones</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marvel:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body id="body-comprar">
