--- a/src/templates/perfil.html
+++ b/src/templates/perfil.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marvel:wght@400;700&display=swap" rel="stylesheet">
     <title>Perfil</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
