--- a/src/static/styles/portafolio.css
+++ b/src/static/styles/portafolio.css
@@ -1,18 +1,47 @@
 body {
     background-color: #2d2d2f;
     color: #aaaaab;
-    font-family: Arial, sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+.grafica_acciones{
+    flex-grow: 1; 
+    height: 50vh ;
+    width: 50%; 
+    animation: fadeIn 2.5s ease-in-out, grow 3s ease-in-out;
+
+
+}
+
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes grow {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .tabla-portafolio {
-    width: 60%; /* Reduced width to make space for the pie chart */
+    width: 90%; /* Reduced width to make space for the pie chart */
     margin: 20px auto; /* Center the table and add top and bottom margins */
     padding: 20px; /* Internal spacing of the table */
     border-collapse: collapse;
     background-color: transparent;
-    color: #aaaaab;
+    color: #b9b9b9;
     border-radius: 8px; /* Opcional: bordes redondeados */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Opcional: sombra para resaltar la tabla */
+     /* Opcional: sombra para resaltar la tabla */
 }
 
 .tabla-portafolio th, .tabla-portafolio td {
@@ -23,8 +52,9 @@ body {
 
 .tabla-portafolio th {
     background-color: transparent;
-    color: #aaaaab;
+    color: #ffffff;
     font-weight: bold;
+    font-size: 18px;
 }
 
 .tabla-portafolio td {
@@ -75,3 +105,39 @@ body {
 .header .right {
     text-align: right;
 }
+
+#toggleConsolidar {
+    font-family: 'Nunito Sans', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 16px;
+    border: none;
+    background-color: #3193e2;
+    color: white; 
+    cursor: pointer; 
+    margin-left: 10px;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 1.2px;
+}
+
+
+@keyframes slideInFadeIn {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.tabla-portafolio tr {
+    opacity: 0; 
+    animation: slideInFadeIn 1s ease-in-out forwards;
+    animation-delay: var(--animation-delay);
+}
+
