--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     {% load static %} <!-- Cargamos las etiquetas estáticas -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marvel:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 </head>
 
